k8s/dev/crd-spec.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    name: ui
    project: claimguru
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: 'CI_JOB_ID'
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ui
      project: claimguru
  template:
    metadata:
      labels:
        name: ui
        project: claimguru
        version: 'CI_COMMIT_SHORT_SHA'
        gitlab-job-id: 'CI_JOB_ID'
    spec:
      securityContext: {}
      containers:
        - name: ui
          securityContext: {}
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 150
            initialDelaySeconds: 2
          # resources:
          #   requests:
          #     memory: ""
          #     cpu: ""
          #   limits:
          #     memory: "100Mi"
          #     cpu: "10m"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    name: ui
    project: claimguru
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: 'CI_JOB_ID'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: ui
    project: claimguru
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
  labels:
    name: ui
    project: claimguru
    version: 'CI_COMMIT_SHORT_SHA'
    gitlab-job-id: 'CI_JOB_ID'
spec:
  hosts:
    - claimguru-ui-CI_MERGE_REQUEST_IID.claimguru.cilalabs.dev
  gateways:
    - istio-system/claimguru-gateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: ui
